gccida/g0/recog_31
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44688:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44689:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2a = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44709:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44710:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2d = ( rtx)x1a[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44733:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[5] = x4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44734:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4a = ( rtx)x3[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44743:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x4a->fld[0]; 
                      ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44746:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3e = (  struct rtx_def *)x2d[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44749:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = x3e; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44756:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2j; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44757:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2k = ( rtx)x1f[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44763:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x3f->fld[0].rtx, recog_data_0.operand[5]) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44765:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4c = ( rtx)x3f[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44768:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3g = (  struct rtx_def *)x2k[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44771:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[4] = x3g; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44778:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x2l->fld[0].rtx, recog_data_0.operand[3]) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44780:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2m = ( rtx)x1g[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44783:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x2m->fld[0].rtx, recog_data_0.operand[4]) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/insn-recog.c:44788:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( rtx_equal_p( x1h->fld[0].rtx, recog_data_0.operand[5]) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_31/src/obj/insn-recog.o] Error 1
